--- a/package.json
+++ b/package.json
@@ -6,15 +6,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^3.2.0",
+    "@walletconnect/web3-provider": "^1.7.4",
+    "@web3auth/web3auth": "^0.4.0",
+    "chart.js": "^3.7.1",
+    "gun": "^0.2020.1235",
+    "magic-sdk": "^8.1.0",
+    "moralis": "^1.5.9",
+    "moralis-v1": "^1.11.0",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.3.5",
+    "react-switch": "^6.0.0",
+    "web3uikit": "^0.1.123"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
